Big Daddy has entered the website

--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Big Daddys fantastical adventures in Dick Landia</title>
+    </head>
+    <body>
+
+    </body>
 </html>
