--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html>
     <head>
         <title>Big Daddys fantastical adventures in Dick Landia</title>
+        <stlye>
+        h1 {text-align: center;}
+        body {
+            font-family:courier, serif;
+        }
+        </stlye>
     </head>
     <body>
-        <h1>You smell like dog shit dog big ungus</h1>
+        <h1>I'm the fucking lizard king</h1>
+        <p>basically you can go fuck yourself</p>
     </body>
 </html>
