--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <stlye>
+
+    <head>
+        <title>Big Daddys fantastical adventures in Dick Landia</title>
+        <style>
         h1 {text-align: center;}
         body {
             font-family:courier, serif;
         }
-    </stlye>
-    <head>
-        <title>Big Daddys fantastical adventures in Dick Landia</title>
-        
+        </style>
     </head>
     <body>
         <h1>I'm the fucking lizard king</h1>
