Style changes for real this time

--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 
     <head>
         <title>Big Daddys fantastical adventures in Dick Landia</title>
-        <style>
-        h1 {text-align: center;}
-        body {
-            font-family:courier, serif;
-        }
-        </style>
+
+        <!-- Add this line to each page for CSS -->
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
     </head>
     <body>
         <h1>I'm the fucking lizard king</h1>
         <p>basically you can go fuck yourself</p>
+        <p id="piss">Piss moment piss moment</p>
     </body>
 </html>
