--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         <h1>I'm the fucking lizard king</h1>
         <p>basically you can go fuck yourself</p>
         <p id="piss">Piss moment piss moment</p>
-        <marquee>you smell like piss</marquee>
+        <marquee scrollamount="15" scrolldelay="60" truespeed="30">you smell like piss</marquee>
     </body>
 </html>
