--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
     <head>
         <title>Big Daddys fantastical adventures in Dick Landia</title>
 
@@ -11,6 +10,7 @@
         <h1>I'm the fucking lizard king</h1>
         <p>basically you can go fuck yourself</p>
         <p id="piss">Piss moment piss moment</p>
-        <marquee scrollamount="15" scrolldelay="60" truespeed="30">you smell like piss</marquee>
+        <marquee scrollamount="30" scrolldelay="60" truespeed="20">you smell like piss</marquee>
+        <script src="js/script.js"></script> 
     </body>
 </html>
