--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
         <link rel="stylesheet" type="text/css" href="css/style.css" />
     </head>
     <body>
+        <div>
+            <ul class="top menu">
+                <li class="bits">Characters</li>
+                <li class="bits">Map</li>
+                <li class="bits">Party Items</li>
+                <li class="bits">Journal</li>
+                <li class="bits">Misc.</li>
+            </ul>
+        </div>
         <h1>I'm the fucking lizard king</h1>
         <p>basically you can go fuck yourself</p>
         <p id="piss">Piss moment piss moment</p>
