centre menu along top

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="css/style.css" />
     </head>
     <body>
-        <div>
+        <div id="top">
             <ul class="top menu">
                 <li class="bits">Characters</li>
                 <li class="bits">Map</li>
