--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="top">
-            <ul class="top menu">
+            <ul class="topMenu">
                 <li class="bits">Characters</li>
                 <li class="bits">Map</li>
                 <li class="bits">Party Items</li>
