--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
         <link rel="stylesheet" type="text/css" href="css/style.css" />
     </head>
     <body>
-        <div id="top">
-            <ul class="topMenu">
-                <li class="bits">Characters</li>
-                <li class="bits">Map</li>
-                <li class="bits">Party Items</li>
-                <li class="bits">Journal</li>
-                <li class="bits">Misc.</li>
+        <div id="navbar">
+            <ul>
+                <li><a href="html/charpage.html" >Characters</a></li>
+                <li><a href="html/map.html">Map</a></li>
+                <li><a href="html/items.html">Party Items</a></li>
+                <li><a href="html/journal.html">Journal</a></li>
+                <li><a href="html/other.html">Misc.</a></li>
             </ul>
         </div>
         <h1>I'm the fucking lizard king</h1>
