fat liunk change

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <body>
         <div id="navbar">
             <ul>
-                <li><a href="html/charpage.html" >Characters</a></li>
-                <li><a href="html/map.html">Map</a></li>
-                <li><a href="html/items.html">Party Items</a></li>
-                <li><a href="html/journal.html">Journal</a></li>
-                <li><a href="html/other.html">Misc.</a></li>
+                <li><a href="dnd/charpage/index.html" >Characters</a></li>
+                <li><a href="dnd/map/index.html">Map</a></li>
+                <li><a href="dnd/items/index.html">Party Items</a></li>
+                <li><a href="dnd/journal/index.html">Journal</a></li>
+                <li><a href="dnd/other/index.html">Misc.</a></li>
             </ul>
         </div>
         <h1>I'm the fucking lizard king</h1>
