--- a/dnd/other/index.html
+++ b/dnd/other/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Other</title>
-        <link rel="stylesheet" type="text/css" href="../css/style.css"/>
+        <link rel="stylesheet" type="text/css" href="../../css/style.css"/>
     </head>
     <body>
     </body>
