--- a/dnd/journal/index.html
+++ b/dnd/journal/index.html
@@ -5,6 +5,6 @@
         <link rel="stylesheet" type="text/css" href="../../css/style.css"/>
     </head>
     <body>
-        <iframe src="https://docs.google.com/document/d/e/2PACX-1vSDx_e611MonjiaFMaGf-FHT5T_-kRwfkx1liXEX8LSA8WWGtQQBT7bu1MBsZG7J6OThLXrxVBikZAb/pub?embedded=true"></iframe>
+        <iframe height="600" width="600" src="https://docs.google.com/document/d/17MP5L3-0jWmbvwhivo52XSzpZpIFFyRZXiK4rZR0vR0/edit?usp=sharing"></iframe>
     </body>
 </html>
