--- a/dnd/other/index.html
+++ b/dnd/other/index.html
@@ -8,7 +8,7 @@
         <div id="navbar">
             <ul>
                 <li><a href="../dnd/charpage">Characters</a></li>
-                <li><a href="../dnd/map">Map</a></li>
+                <li><a href="dnd\map\">Map</a></li>
                 <li><a href="../dnd/items">Party Items</a></li>
                 <li><a href="../dnd/journal">Journal</a></li>
                 <li><a href="../dnd/other">Misc.</a></li>
