Menu integration shit hopefully

--- a/dnd/charpage/index.html
+++ b/dnd/charpage/index.html
@@ -7,11 +7,11 @@
     <body>
         <div id="navbar">
             <ul>
-                <li><a href="../dnd/charpage">Characters</a></li>
-                <li><a href="../dnd/map">Map</a></li>
-                <li><a href="../dnd/items">Party Items</a></li>
-                <li><a href="../dnd/journal">Journal</a></li>
-                <li><a href="../dnd/other">Misc.</a></li>
+                <li><a href="../charpage">Characters</a></li>
+                <li><a href="../map">Map</a></li>
+                <li><a href="../items">Party Items</a></li>
+                <li><a href="../journal">Journal</a></li>
+                <li><a href="../other">Misc.</a></li>
             </ul>
         </div>
     </body>
