--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
         <div id="navbar">
             <ul>
+                <li class="active"><a href="./">Home</a></li>
                 <li><a href="dnd/charpage">Characters</a></li>
                 <li><a href="dnd/map">Map</a></li>
                 <li><a href="dnd/items">Party Items</a></li>
