--- a/dnd/journal/index.html
+++ b/dnd/journal/index.html
@@ -11,7 +11,7 @@
                 <li><a href="../charpage">Characters</a></li>
                 <li><a href="../map">Map</a></li>
                 <li><a href="../items">Party Items</a></li>
-                <li><a href="../journal">Journal</a></li>
+                <li class="active"><a href="../journal">Journal</a></li>
                 <li><a href="../other">Misc.</a></li>
             </ul>
         </div>
