--- a/dnd/map/index.html
+++ b/dnd/map/index.html
@@ -9,7 +9,7 @@
             <ul>
                 <li><a href="../../index.html">Home</a></li>
                 <li><a href="../charpage">Characters</a></li>
-                <li><a href="../map">Map</a></li>
+                <li class="active"><a href="../map">Map</a></li>
                 <li><a href="../items">Party Items</a></li>
                 <li><a href="../journal">Journal</a></li>
                 <li><a href="../other">Misc.</a></li>
