--- a/dnd/other/index.html
+++ b/dnd/other/index.html
@@ -12,7 +12,7 @@
                 <li><a href="../map">Map</a></li>
                 <li><a href="../items">Party Items</a></li>
                 <li><a href="../journal">Journal</a></li>
-                <li><a href="../other">Misc.</a></li>
+                <li class="active"><a href="../other">Misc.</a></li>
             </ul>
         </div>
     </body>
