--- a/dnd/charpage/index.html
+++ b/dnd/charpage/index.html
@@ -8,7 +8,7 @@
         <div id="navbar">
             <ul>
                 <li><a href="../../index.html">Home</a></li>
-                <li><a href="../charpage">Characters</a></li>
+                <li class="active"><a href="../charpage">Characters</a></li>
                 <li><a href="../map">Map</a></li>
                 <li><a href="../items">Party Items</a></li>
                 <li><a href="../journal">Journal</a></li>
