--- a/dnd/items/index.html
+++ b/dnd/items/index.html
@@ -10,7 +10,7 @@
                 <li><a href="../../index.html">Home</a></li>
                 <li><a href="../charpage">Characters</a></li>
                 <li><a href="../map">Map</a></li>
-                <li><a href="../items">Party Items</a></li>
+                <li class="active"><a href="../items">Party Items</a></li>
                 <li><a href="../journal">Journal</a></li>
                 <li><a href="../other">Misc.</a></li>
             </ul>
