--- a/dnd/other/index.html
+++ b/dnd/other/index.html
@@ -7,7 +7,7 @@
     <body>
         <div id="navbar">
             <ul>
-                <li><a href="../../index.html">Home</a></li>
+                <li><a href="../../">Home</a></li>
                 <li><a href="../charpage">Characters</a></li>
                 <li><a href="../map">Map</a></li>
                 <li><a href="../items">Party Items</a></li>
