--- a/dnd/map/index.html
+++ b/dnd/map/index.html
@@ -13,6 +13,12 @@
                 <li><a href="../items">Party Items</a></li>
                 <li><a href="../journal">Journal</a></li>
                 <li><a href="../other">Misc.</a></li>
+
+                <map name="workmap">
+                    <area shape="rect" coords="34,44,270,350" alt="Computer" href="computer.htm">
+                    <area shape="rect" coords="290,172,333,250" alt="Phone" href="phone.htm">
+                    <area shape="circle" coords="337,300,44" alt="Cup of coffee" href="coffee.htm">
+                  </map>
             </ul>
         </div>
     </body>
