--- a/dnd/map/index.html
+++ b/dnd/map/index.html
@@ -18,7 +18,7 @@
                 
             </ul>
 
-            <img src="map.png" alt="Lands Of Zulla" height="1000"  width="400"> 
+            <img src="../../img/map.png" alt="Lands Of Zulla" height="1000"  width="400"> 
 
         </div>
     </body>
