--- a/dnd/map/index.html
+++ b/dnd/map/index.html
@@ -17,9 +17,9 @@
                 
                 
             </ul>
-
-            <img id="map" src="../../img/map.jpg" alt="Lands Of Zulla" height="1650"  width="1080"> 
-
+            <div class="mapD">
+                <img id="map" src="../../img/map.jpg" alt="Lands Of Zulla" height="1650"  width="1080"> 
+            </div>
         </div>
     </body>
 </html>
