--- a/dnd/map/index.html
+++ b/dnd/map/index.html
@@ -17,7 +17,7 @@
                 
                 
             </ul>
-            <div class="mapD">
+            <div>
                 <img id="map" src="../../img/map.jpg" alt="Lands Of Zulla" height="1650"  width="1080"> 
             </div>
         </div>
