--- a/dnd/map/index.html
+++ b/dnd/map/index.html
@@ -18,7 +18,7 @@
                 
             </ul>
             <div>
-                <img id="map" src="../../img/map.jpg" alt="Lands Of Zulla" height="1650"  width="1080"> 
+                <img id="map" src="../../img/map.jpg" alt="Lands Of Zulla" height="1650"  width="1080" style="width: 50%;"> 
             </div>
         </div>
     </body>
