--- a/dnd/map/index.html
+++ b/dnd/map/index.html
@@ -17,6 +17,9 @@
                 
                 
             </ul>
+        </div>
+            <br> </br>
+            <br> </br>
             <div>
                 <img id="map" src="../../img/map.jpg" alt="Lands Of Zulla" height="1650"  width="1080"> 
             </div>
