--- a/dnd/map/index.html
+++ b/dnd/map/index.html
@@ -18,10 +18,9 @@
                 
             </ul>
         </div>
-            <br> </br>
-            <br> </br>
+            <br>
             <div>
-                <img id="map" src="../../img/map.jpg" alt="Lands Of Zulla" height="1650"  width="1080"> 
+                <img id="map" src="../../img/map.jpg" alt="Lands Of Zulla" style="height:90vh;width:auto;"> 
             </div>
         </div>
     </body>
