--- a/dnd/map/index.html
+++ b/dnd/map/index.html
@@ -22,6 +22,7 @@
             <br> </br>
             <div>
                 <img id="map" src="../../img/map.jpg" alt="Lands Of Zulla" height="1650"  width="1080"> 
+                <div title="Palace">Ren</div>
             </div>
         </div>
     </body>
