first character sheet

--- a/dnd/charpage/index.html
+++ b/dnd/charpage/index.html
@@ -15,5 +15,9 @@
                 <li><a href="../other">Misc.</a></li>
             </ul>
         </div>
+
+        <div>
+            <img src="../../img/Saoirse Character Sheet.png" alt="Fuck" width="50%" height="50%">
+        </div>
     </body>
 </html>
