slightly smaller character sheet

--- a/dnd/charpage/index.html
+++ b/dnd/charpage/index.html
@@ -17,7 +17,7 @@
         </div>
 
         <div>
-            <img src="../../img/Saoirse Character Sheet.png" alt="Fuck" width="50%" height="50%">
+            <img title="Saoirse" src="../../img/Saoirse Character Sheet.png" alt="Fuck" width="40%" height="40%">
         </div>
     </body>
 </html>
