added css and border

--- a/dnd/charpage/index.html
+++ b/dnd/charpage/index.html
@@ -16,8 +16,9 @@
             </ul>
         </div>
 
+        <br>
         <div>
-            <img title="Saoirse" src="../../img/Saoirse Character Sheet.png" alt="Fuck" width="40%" height="40%">
+            <img class="Character" src="../../img/Saoirse Character Sheet.png" alt="Fuck">
         </div>
     </body>
 </html>
