--- a/dnd/map/index.html
+++ b/dnd/map/index.html
@@ -21,7 +21,7 @@
             <br> </br>
             <br> </br>
             <div>
-                <img id="map" src="../../img/map.jpg" alt="Lands Of Zulla" height="1650"  width="1080">
+                <img src="../../img/map.jpg" alt="Lands Of Zulla" style="height:90vh;width:auto;">
             </div>
         </div>
     </body>
