--- a/dnd/map/index.html
+++ b/dnd/map/index.html
@@ -13,14 +13,11 @@
                 <li><a href="../items">Party Items</a></li>
                 <li><a href="../journal">Journal</a></li>
                 <li><a href="../other">Misc.</a></li>
-
-                
-                
             </ul>
         </div>
             <br>
             <div>
-                <img src="../../img/map.jpg" alt="Lands Of Zulla" style="height:90vh;width:auto;">
+                <img src="../../img/map.jpg" alt="Lands Of Zulla" style="height:90vh;width:auto;display:block;margin:auto;">
             </div>
         </div>
     </body>
