General code cleanup, fixes

--- a/dnd/charpage/index.html
+++ b/dnd/charpage/index.html
@@ -15,11 +15,10 @@
                 <li><a href="../other">Misc.</a></li>
             </ul>
         </div>
-
         <br>
         <div>
-            <img class="Character" src="../../img/Saoirse Character Sheet.png" alt="Fuck">
-            <img class="Character" src="../../img/Ren Character Sheet.png" alt="Shit">
+            <img id="character" src="../../img/Saoirse Character Sheet.png" alt="Fuck">
+            <img id="character" src="../../img/Ren Character Sheet.png" alt="Shit">
         </div>
     </body>
 </html>
