--- a/dnd/charpage/index.html
+++ b/dnd/charpage/index.html
@@ -17,8 +17,8 @@
         </div>
         <br>
         <div>
-            <img id="character" src="../../img/Saoirse Character Sheet.png" alt="Fuck">
-            <img id="character" src="../../img/Ren Character Sheet.png" alt="Shit">
+            <img id="character" src="../../img/char_sheets/Saoirse.png" alt="Fuck">
+            <img id="character" src="../../img/char_sheets/Ren.png" alt="Shit">
         </div>
     </body>
 </html>
