Added Luna character sheet

--- a/dnd/charpage/index.html
+++ b/dnd/charpage/index.html
@@ -19,6 +19,7 @@
         <div>
             <img id="character" src="../../img/char_sheets/Saoirse.png" alt="Fuck">
             <img id="character" src="../../img/char_sheets/Ren.png" alt="Shit">
+            <img id="character" src="../../img/char_sheets/Luna.png" alt="Damn">
         </div>
     </body>
 </html>
