--- a/dnd/charpage/index.html
+++ b/dnd/charpage/index.html
@@ -20,6 +20,7 @@
             <img id="character" src="../../img/char_sheets/Saoirse.png" alt="Fuck">
             <img id="character" src="../../img/char_sheets/Ren.png" alt="Shit">
             <img id="character" src="../../img/char_sheets/Luna.png" alt="Damn">
+            <img id="character" src="../../img/char_sheets/Alahnna.png" alt="Cock">
         </div>
     </body>
 </html>
