--- a/dnd/charpage/index.html
+++ b/dnd/charpage/index.html
@@ -21,6 +21,7 @@
             <img id="character" src="../../img/char_sheets/Ren.png" alt="Shit">
             <img id="character" src="../../img/char_sheets/Luna.png" alt="Damn">
             <img id="character" src="../../img/char_sheets/Alahnna.png" alt="Cock">
+            <img id="character" src="../../img/char_sheets/Mina.png" alt="God">
         </div>
     </body>
 </html>
